--- a/CaptainToadClone.uproject
+++ b/CaptainToadClone.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.4",
+	"EngineAssociation": "{363D29E5-4595-B127-E6E0-C6BCC98A199A}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
